second version download .btn added

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   </head>
   <body>
     <form id="form">
-      Enter url:    <input type="text" id="url" />
-    </br>
+      Enter url: <input type="text" id="url" />
+      <br />
       size :<select id="size">
         <option value="100">100*100</option>
         <option value="200">200*200</option>
@@ -20,13 +20,11 @@
         <option value="400">400*400</option>
         <option value="500">500*500</option>
       </select>
-    </br>
+      <br />
       <button type="submit">create qr code</button>
-
     </form>
-    </form>
-
-    <div id="qrcode">
-    </div>
+    <br />
+    <div id="qrcode"></div>
+    <div id="save_btn"></div>
   </body>
 </html>
